:sad: Fix image in preload container overlapping

--- a/static/stylus/blog.styl
+++ b/static/stylus/blog.styl
@@ -29,6 +29,10 @@ article#blog-article
     object-fit: cover
     object-position: center
 
+    & > .image-data
+        width 100%
+        height inherit
+
 #blog-content
     display: block
     width:100%
